[package]
name = "aoc-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc_py03"
crate-type = ["cdylib"]

[dependencies]
md5 = "0.7.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
